# xiaopow

./: .coverage  .gitignore  CLAUDE.md  DESIGN.md  README.md  config.yaml.template  coverage.json  pyproject.toml  requirements.txt  sandbox-docker-compose.yaml
docs/: design-api.md  design-data.md  design-modules.md  design-observability.md
tests/integration/: conftest.py  test_api.py  test_e2e_conversation.py  test_feishu_ops_live.py  test_file_pipeline.py
tests/unit/: test_add_image_tool.py  test_aliyun_llm.py  test_baidu_search_script.py  test_baidu_search_tool.py  test_capture_sender.py  test_capture_sender_card.py  test_cleanup_service.py  test_cron_service.py  test_downloader.py  test_feishu_listener.py  test_feishu_ops_scripts.py  test_feishu_sender.py  test_feishu_sender_card.py  test_intermediate_tool.py  test_main_crew.py  test_metrics.py  test_runner.py  test_runner_card.py  test_sender_protocol.py  test_session_key.py  test_session_manager.py  test_skill_crew.py  test_skill_loader.py
xiaopaw/: main.py  models.py  runner.py
xiaopaw/agents/: __init__.py  main_crew.py  models.py  skill_crew.py
xiaopaw/api/: capture_sender.py  schemas.py  test_server.py
xiaopaw/cleanup/: service.py
xiaopaw/cron/: models.py  service.py
xiaopaw/feishu/: downloader.py  listener.py  sender.py  session_key.py
xiaopaw/llm/: __init__.py  aliyun_llm.py
xiaopaw/observability/: logging_config.py  metrics.py  metrics_server.py
xiaopaw/session/: manager.py  models.py
xiaopaw/skills/: load_skills.yaml
xiaopaw/tools/: __init__.py  add_image_tool_local.py  (+3 more)
(+7 files in other folders)
